--- a/style.css
+++ b/style.css
@@ -1,21 +1,23 @@
 body {
     font-family: sans-serif;
+    text-align: center;
 }
 
 .link-header{
-    color: palevioletred;
+    color: rgb(233, 46, 108);
     text-decoration: none;
     font-size: 30px;
     background-color: darkblue;
     border-radius: 15px;
     padding: 5px;
+    margin-right: 55px;
 }
 
 .link-header:hover{
     color: darkblue;
     text-decoration: none;
     font-size: 30px;
-    background-color: palevioletred;
+    background-color: rgb(233, 46, 108);
     border-radius: 15px;
     padding: 5px;
     transition: 1s linear;
@@ -40,14 +42,15 @@ body {
     border-radius: 10px;
     transition: 1s linear;
 }
+
 h1{
-    color: deeppink;
-    background-color: darkmagenta;
+    color: rgba(192, 2, 103, 0.795);
+    background-image: linear-gradient(to bottom, deeppink, white, darkmagenta); 
     margin: 5px;
     font-size: 28px;
     text-decoration: none;
     padding: 5px;
-    margin-left: 10px;
+    margin-left: 170px;
     border-radius: 10px;
     width: 200px;
     text-align: center;
@@ -56,4 +59,13 @@ h1{
 li{
     font-size: 20px;
     color: darkblue;
+}
+
+ul {
+    position: absolute;
+    left: 150px;
+}
+
+.istorii {
+    margin-top: 100px;
 }
